test/invalid/baseline/raises.txt
Syntax error at line 5, since `interface Person`:
  attribute DOMString name setraises (InvalidName);
                           ^ Unterminated attribute
